<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:fitsSystemWindows="true"
	android:background="@drawable/bg"
	android:padding="@dimen/login_padding">


	<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:orientation="vertical">

		<!--<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ProPic"
                android:layout_width="150dp"
                android:layout_height="143dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="3dp"
                app:srcCompat="@drawable/ic_account_black" />

			<android.support.design.widget.FloatingActionButton
				android:id="@+id/SearchPic"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true"
				android:layout_alignParentTop="true"
				android:layout_marginRight="110dp"
				android:layout_marginEnd="110dp"
				android:layout_marginTop="111dp"
				app:srcCompat="@drawable/ic_add_black_24dp" />

		</RelativeLayout>-->

		<EditText
			android:id="@+id/s_user"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/edittext_bg"
			android:drawableLeft="@drawable/ic_person_white_24dp"
			android:drawableStart="@drawable/ic_person_white_24dp"
			android:hint="@string/prompt_name"
			android:inputType="textPersonName"
			android:maxLines="1" />

		<Space
			android:layout_width="wrap_content"
			android:layout_height="@dimen/ui_elems_spacing" />

		<EditText
			android:id="@+id/s_email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/edittext_bg"
			android:drawableLeft="@drawable/ic_email_white_24dp"
			android:drawableStart="@drawable/ic_email_white_24dp"
			android:hint="@string/prompt_email"
			android:inputType="textEmailAddress"
			android:maxLines="1" />

		<Space
			android:layout_width="wrap_content"
			android:layout_height="@dimen/ui_elems_spacing" />

		<EditText
			android:id="@+id/s_pass"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/edittext_bg"
			android:drawableLeft="@drawable/ic_lock_white_24dp"
			android:drawableStart="@drawable/ic_lock_white_24dp"
			android:hint="@string/prompt_password"
			android:inputType="textPassword"
			android:maxLines="1" />

		<Space
			android:layout_width="wrap_content"
			android:layout_height="@dimen/ui_elems_spacing" />

		<RadioGroup
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<RadioButton
				android:id="@+id/m"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:checked="true"
				android:onClick="setGender"
				android:text="@string/radio_male" />

			<RadioButton
				android:id="@+id/f"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:onClick="setGender"
				android:text="@string/radio_female" />

		</RadioGroup>

		<RadioGroup
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<RadioButton
				android:id="@+id/s"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:checked="true"
				android:onClick="setProf"
				android:text="@string/radio_student" />

			<RadioButton
				android:id="@+id/p"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:onClick="setProf"
				android:text="@string/radio_professional" />

		</RadioGroup>

		<Space
			android:layout_width="wrap_content"
			android:layout_height="@dimen/ui_elems_spacing" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/s_ph"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@drawable/edittext_bg"
				android:drawableLeft="@drawable/ic_call_white_24dp"
				android:drawableStart="@drawable/ic_call_white_24dp"
				android:hint="@string/prompt_phone"
				android:inputType="phone"
				android:maxLines="1" />

			<!-- DO NOT DELETE,
				WILL BE USED IN A FUTURE UPDATE

			<Button
				android:id="@+id/s_button_send"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:onClick="send_otp"
				android:text="@string/button_otp" /> -->

		</LinearLayout>

		<!-- AND THIS TOO!
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/otp_info" />

		<Space
			android:layout_width="wrap_content"
			android:layout_height="@dimen/ui_elems_spacing" />

		<EditText
			android:id="@+id/s_otp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/edittext_bg"
			android:gravity="center"
			android:hint="@string/prompt_otp"
			android:inputType="number"
			android:maxLength="@integer/otp_length"
			android:maxLines="1" /> -->

		<Space
			android:layout_width="wrap_content"
			android:layout_height="8dp" />

		<Button
			android:id="@+id/s_otg"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:background="@drawable/ripple_red"
			android:text="@string/button_signup" />
		<!--android:enabled="false"-->

	</LinearLayout>

</ScrollView>
